css/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    /*border: 0.5px solid green;*/
    font-family: 'Oxanium';
    
}

/* VARIABLES */
:root {
    --bg-color: rgb(127, 255, 212);
}



body {
    background: linear-gradient(145deg, rgb(255, 255, 255) 0%, rgb(127, 255, 212) 50%, rgb(255, 255, 255) 100%);
}

.header {
    background-color: rgb(130, 180, 250);
    border: 1.5px solid green;
    text-align: center;
    padding: 25px 0;
    font-size: 15px;
    font-family: 'Orbitron';

    
}


/* NAVIGATION */
nav {
    position: sticky;
    top: 10px;
    z-index: 100;
    justify-items: center;
}

.navigation {
    background-color: var(--bg-color);
    color: black;
    text-align: center;
    display: flex;
    align-items: center;
    margin: 10px 0 10px 0;
    max-width: 600px;
    border: 2.5px solid green;
}

.navigation ul {
    display: flex;
    align-items: center;
    padding: 5px 0 5px 0;
    list-style-type: none;
}

.navigation li {
    color: black;
    padding: 0 10px 0 10px;
    font-size: 20px;
}

.navigation a {
    font-family: 'Orbitron';
}


/* MAIN CONTENT */

main {
    display: flex;
    flex-direction: column;
    align-items: center;
}


.content {
    width: 60%;
    background-color: var(--bg-color);
    margin: 0 20% 0 20%;
}



a, a:visited {
    color: black;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

h1 {
    font-family: 'Orbitron';
}

h2 {
    text-align: center;
    font-size: 25px;
    padding: 15px 0 15px 0;
    font-family: 'Orbitron';
}

h3 {
    text-align: center;
    font-size: 20px;
    padding: 10px 0 10px 0;
    font-family: 'Orbitron';
}

h4 {
    text-align: center;
    font-size: 17.5px;
}

p {
    text-align: center;
    font-size: 17.5px;
    padding: 5px 10px 5px 10px;
}


li {
    padding: 5px 0;
}

.break {
    background-color: var(--bg-color);
    height: 15px;
    
}

.section {
    background-color: whitesmoke;
    border: 5px solid green;
    box-shadow: 5px 5px 15px black;
    padding: 2.5px 7.5px;
    margin: 0 0 20px 0;
    width: 60%;
    justify-items: center;
}

.section ul {
    padding: 0 0 10px 20px;
    text-align: left;
    font-size: 17.5px;
    max-width: 70%;
    justify-items: left;
}

.body-link {
    text-align: center;
    font-size: 15px;
    font-weight: bold;
    padding: 10px 0;
}


table {
    font-size: 15px;
    line-height: 1.5;
    padding: 25px 0 25px 0;
    max-width: 80%;
}

th{
    background-color: rgb(40, 60, 200);
    color: whitesmoke;
}

tr:nth-child(odd){
    background-color: rgb(130, 180, 250);
}

tr:nth-child(even){
    background-color: rgb(180, 220, 250);
}

td {
    padding: 0 5px;
}




/* FOOTER */
.footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: black;
    padding-top: 10px;
}

.footer * {
    font-size: 10px;
    color: white;
}

.footer a {
    color: white;
}

.footer ul {
    display: flex;
    
    list-style-type: none;
    padding: 0;
}

.footer li {
    padding: 0 7.5px;
    font-weight: bold;
}


@media screen and (max-width: 800px){
    .navigation li {
        font-size: 12px;
    }

    .header {
        font-size: 15px;
    }

    h2 {
        font-size: 15px;
    }

    h3 {
        font-size: 14px;
    }

    h4 {
        font-size: 13px;
    }

    p {
        font-size: 13px;
    }

    .section li {
        font-size: 13px;
    }

    .body-link {
        font-size: 12px;
    }

    table {
        font-size: 11px;
    }

    .section {
        width: 75%;
    }
}


@media screen and (max-width: 500px){

    .navigation li {
        font-size: 10px;
    }

    .header {
        font-size: 8px;
    }

    h2 {
        font-size: 14px;
    }

    h3 {
        font-size: 13px;
    }

    h4 {
        font-size: 13px;
    }

    p {
        font-size: 11px;
    }

    .section li {
        font-size: 11px;
    }

    .body-link {
        font-size: 11px;
    }

    table {
        font-size: 11px;
    }

    .section {
        width: 90%;
        background-color: red;
    }
}




    

